unpackaged/main/default/objects/Policy_Implementation__c/fields/Earnings_Definition_Change__c.field-meta.xml
<CustomField>
    <fullName>Earnings_Definition_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment includes earnings definition change</description>
    <label>Earnings Definition Change</label>
    <type>Checkbox</type>
</CustomField>