unpackaged/main/default/objects/Policy_Implementation__c/fields/EC_R__c.field-meta.xml
<CustomField>
    <fullName>EC_R__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Essential Care &amp; Recovery</description>
    <inlineHelpText>Essential Care &amp; Recovery. Bundled package all 3 work-site benefits with EC&amp;R Master Application</inlineHelpText>
    <label>EC&amp;R</label>
    <type>Checkbox</type>
</CustomField>