unpackaged/main/default/objects/Policy_Implementation__c/fields/EDI__c.field-meta.xml
<CustomField>
    <fullName>EDI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EDI will add/update members</description>
    <inlineHelpText>EDI will add/update members</inlineHelpText>
    <label>EDI</label>
    <type>Checkbox</type>
</CustomField>