unpackaged/main/default/objects/Policy_Implementation__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <formula>Case__r.Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>