unpackaged/main/default/objects/Policy_Implementation__c/fields/Effective_Date_Completion__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_Completion__c</fullName>
    <description>This field contains the date against Effective date   field which belongs to Gate2.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Date Completion</label>
    <type>DateTime</type>
</CustomField>