unpackaged/main/default/objects/Policy_Implementation__c/fields/Email_EAP_and_FMLA_Account__c.field-meta.xml
<CustomField>
    <fullName>Email_EAP_and_FMLA_Account__c</fullName>
    <description>This field contains Email EAP and FMLA Account Sold forms when applicable to
appropriate vendors.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Email EAP and FMLA Account Sold forms when applicable to
appropriate vendors</inlineHelpText>
    <label>Email EAP and FMLA Account</label>
    <type>TextArea</type>
</CustomField>