unpackaged/main/default/objects/Policy_Implementation__c/fields/Email_EAP_and_FMLA_Account_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_EAP_and_FMLA_Account_Date__c</fullName>
    <description>This field contains date against Email EAP and FMLA Account</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email EAP and FMLA Account Date</label>
    <type>DateTime</type>
</CustomField>