unpackaged/main/default/objects/Policy_Implementation__c/fields/Employees_not_actively_at_work_Date__c.field-meta.xml
<CustomField>
    <fullName>Employees_not_actively_at_work_Date__c</fullName>
    <description>This field contains the date against Employees not active at work  field which belongs to Gate2.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Employees not active at work Date</label>
    <type>DateTime</type>
</CustomField>