unpackaged/main/default/objects/Policy_Implementation__c/fields/Employer_Name_and_Location__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name_and_Location__c</fullName>
    <description>This field shows status of  Employer Name and Location and contains information of Gate2</description>
    <label>Employer Name and Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>