unpackaged/main/default/objects/Policy_Implementation__c/fields/Employer_Name_and_Location_Date__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name_and_Location_Date__c</fullName>
    <description>This field contains the date against Employer Name and Location if Applicable field which belongs to Gate2.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer Name and Location Date</label>
    <type>DateTime</type>
</CustomField>