unpackaged/main/default/objects/Policy_Implementation__c/fields/Estimated_Premium__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Premium__c</fullName>
    <inlineHelpText>This is the Annual Estimated Premium</inlineHelpText>
    <label>Estimated Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>