unpackaged/main/default/objects/Policy_Implementation__c/fields/Evidence_of_Insurability_EOI_form_Date__c.field-meta.xml
<CustomField>
    <fullName>Evidence_of_Insurability_EOI_form_Date__c</fullName>
    <description>This field contains the date againstEvidence of Insurability (EOI) forms  field which belongs to Gate2.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Evidence of Insurability (EOI) form Date</label>
    <type>DateTime</type>
</CustomField>