unpackaged/main/default/objects/Policy_Implementation__c/fields/Evidence_of_Insurability_EOI_forms__c.field-meta.xml
<CustomField>
    <fullName>Evidence_of_Insurability_EOI_forms__c</fullName>
    <description>This field shows status of  Evidence of Insurability (EOI) forms and contains information of Gate2</description>
    <label>Evidence of Insurability (EOI) Forms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Halt</fullName>
            </value>
            <value>
                <fullName>Continue/Don’t Submit</fullName>
            </value>
            <value>
                <fullName>Continue/Submit</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>