unpackaged/main/default/objects/Policy_Implementation__c/fields/FICA_Match_Agreement__c.field-meta.xml
<CustomField>
    <fullName>FICA_Match_Agreement__c</fullName>
    <description>This field contains Gate2 Infomation.</description>
    <label>FICA Match Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>