unpackaged/main/default/objects/Policy_Implementation__c/fields/FICA_Match_Changes__c.field-meta.xml
<CustomField>
    <fullName>FICA_Match_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment includes FICA match change</description>
    <label>FICA Match Changes</label>
    <type>Checkbox</type>
</CustomField>