unpackaged/main/default/objects/Policy_Implementation__c/fields/Flip_Hold_Issued_Flags__c.field-meta.xml
<CustomField>
    <fullName>Flip_Hold_Issued_Flags__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Remove hold from billing and risk flags in Compass</inlineHelpText>
    <label>Flip Hold/Issued Flags</label>
    <type>TextArea</type>
</CustomField>