unpackaged/main/default/objects/Policy_Implementation__c/fields/Flip_Hold_Issued_Flags_Date__c.field-meta.xml
<CustomField>
    <fullName>Flip_Hold_Issued_Flags_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flip Hold/Issued Flags Date</label>
    <type>DateTime</type>
</CustomField>