unpackaged/main/default/objects/Policy_Implementation__c/fields/For_large_cases_Date__c.field-meta.xml
<CustomField>
    <fullName>For_large_cases_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>For large cases Date</label>
    <type>DateTime</type>
</CustomField>