unpackaged/main/default/objects/Policy_Implementation__c/fields/Form_Sent_to_SBMA__c.field-meta.xml
<CustomField>
    <fullName>Form_Sent_to_SBMA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field contains Gate1 Information.</description>
    <label>Form Sent to SBMA</label>
    <type>Checkbox</type>
</CustomField>