unpackaged/main/default/objects/Policy_Implementation__c/fields/Form_Sent_to_SBMA_Date__c.field-meta.xml
<CustomField>
    <fullName>Form_Sent_to_SBMA_Date__c</fullName>
    <description>This field contains Gate1 information</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Form Sent to SBMA Date</label>
    <type>DateTime</type>
</CustomField>