unpackaged/main/default/objects/Policy_Implementation__c/fields/Full_Time_Hours_Change__c.field-meta.xml
<CustomField>
    <fullName>Full_Time_Hours_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment includes full time hour changes</description>
    <label>Full Time Hours Change</label>
    <type>Checkbox</type>
</CustomField>