unpackaged/main/default/objects/Policy_Implementation__c/fields/Gate_1_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Gate_1_Completion_Date__c</fullName>
    <description>This field contains Gate1 information</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Gate 1 Completion Date</label>
    <type>DateTime</type>
</CustomField>