unpackaged/main/default/objects/Policy_Implementation__c/fields/Gate_1_Overview__c.field-meta.xml
<CustomField>
    <fullName>Gate_1_Overview__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Use this field to provide an overview of where the Gate is in the process.</inlineHelpText>
    <label>Gate 1 Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>