unpackaged/main/default/objects/Policy_Implementation__c/fields/Gate_1_Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Gate_1_Percent_Complete__c</fullName>
    <formula>(9 - Gate_1_Status__c )/9</formula>
    <label>Gate 1 % Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>