unpackaged/main/default/objects/Policy_Implementation__c/fields/Gate_2_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Gate_2_Completion_Date__c</fullName>
    <description>This field contains Gate2 information.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Gate 2 Completion Date</label>
    <type>DateTime</type>
</CustomField>