unpackaged/main/default/objects/Policy_Implementation__c/fields/Gate_2_Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Gate_2_Percent_Complete__c</fullName>
    <formula>(25- Gate_2_Status__c )/25</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gate 2 % Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>