unpackaged/main/default/objects/Policy_Implementation__c/fields/Generate_Roster__c.field-meta.xml
<CustomField>
    <fullName>Generate_Roster__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Run Member Benefit Status Report (Roster) and
request a bill from Premium Accounting</inlineHelpText>
    <label>Generate Roster</label>
    <type>TextArea</type>
</CustomField>