unpackaged/main/default/objects/Policy_Implementation__c/fields/Generate_Roster_Date__c.field-meta.xml
<CustomField>
    <fullName>Generate_Roster_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Generate Roster Date</label>
    <type>DateTime</type>
</CustomField>