unpackaged/main/default/objects/Policy_Implementation__c/fields/GI_Change__c.field-meta.xml
<CustomField>
    <fullName>GI_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment includes GI Change</description>
    <label>GI Change</label>
    <type>Checkbox</type>
</CustomField>