unpackaged/main/default/objects/Policy_Implementation__c/fields/Grandfathering__c.field-meta.xml
<CustomField>
    <fullName>Grandfathering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grandfathering</label>
    <type>Checkbox</type>
</CustomField>