unpackaged/main/default/objects/Policy_Implementation__c/fields/Group_Demographic_Change__c.field-meta.xml
<CustomField>
    <fullName>Group_Demographic_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment includes group demographic change</description>
    <label>Group Demographic Change</label>
    <type>Checkbox</type>
</CustomField>