unpackaged/main/default/objects/Policy_Implementation__c/fields/Group_meets_Issue_Participation__c.field-meta.xml
<CustomField>
    <fullName>Group_meets_Issue_Participation__c</fullName>
    <description>This field status of Group meets Issue &amp; Participation and contains information of Gate2</description>
    <label>Group meets Issue &amp; Participation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Halt</fullName>
            </value>
            <value>
                <fullName>Continue/Don’t Submit</fullName>
            </value>
            <value>
                <fullName>Continue/Submit</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>