unpackaged/main/default/objects/Policy_Implementation__c/fields/Group_meets_Issue_Participation_Date__c.field-meta.xml
<CustomField>
    <fullName>Group_meets_Issue_Participation_Date__c</fullName>
    <description>This field contains the date against Group meets Issue &amp; Participation   field which belongs to Gate2.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Group meets Issue &amp; Participation Date</label>
    <type>DateTime</type>
</CustomField>