unpackaged/main/default/objects/Policy_Implementation__c/fields/Group_STD__c.field-meta.xml
<CustomField>
    <fullName>Group_STD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to capture products on Policy Implementation triage section</description>
    <label>Group STD</label>
    <type>Checkbox</type>
</CustomField>