unpackaged/main/default/objects/Policy_Implementation__c/fields/Group_Tier__c.field-meta.xml
<CustomField>
    <fullName>Group_Tier__c</fullName>
    <description>Tier of the Group</description>
    <inlineHelpText>Tier of the Group</inlineHelpText>
    <label>Group Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
            <value>
                <fullName>Reporting Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>