unpackaged/main/default/objects/Policy_Implementation__c/fields/GTL_ADD__c.field-meta.xml
<CustomField>
    <fullName>GTL_ADD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to capture products on Policy Implementation triage section</description>
    <label>GTL/ADD</label>
    <type>Checkbox</type>
</CustomField>