unpackaged/main/default/objects/Policy_Implementation__c/fields/GTL_ADD_Dep_Life_Prior_Carrier_Info_n__c.field-meta.xml
<CustomField>
    <fullName>GTL_ADD_Dep_Life_Prior_Carrier_Info_n__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GTL/ADD/Dep Life + Prior Carrier Info</label>
    <length>1200</length>
    <type>Html</type>
</CustomField>