unpackaged/main/default/objects/Policy_Implementation__c/fields/Hospital_Care_Packages_Offered__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Care_Packages_Offered__c</fullName>
    <defaultValue>&quot;      •   Packages Offered:               &quot; + BR() + 
&quot;             Basic / Select/ Ultra&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Hospital Care Packages Offered</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>