unpackaged/main/default/objects/Policy_Implementation__c/fields/Hours_Worked_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked_Per_Week__c</fullName>
    <description>This field status of Hours Worked Per Week and contains information of Gate2</description>
    <label>Hours Worked Per Week</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Halt</fullName>
            </value>
            <value>
                <fullName>Continue/Don’t Submit</fullName>
            </value>
            <value>
                <fullName>Continue/Submit</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>