unpackaged/main/default/objects/Policy_Implementation__c/fields/Hours_Worked_Per_Week_Date__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked_Per_Week_Date__c</fullName>
    <description>This field contains the date against Hours Worked Per Week field which belongs to Gate2.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Hours Worked Per Week Date</label>
    <type>DateTime</type>
</CustomField>