unpackaged/main/default/objects/Policy_Implementation__c/fields/How_Products_Are_Billed__c.field-meta.xml
<CustomField>
    <fullName>How_Products_Are_Billed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>How Products Are Billed</label>
    <length>1200</length>
    <type>Html</type>
</CustomField>