unpackaged/main/default/objects/Policy_Implementation__c/fields/Implementation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Notes__c</fullName>
    <description>Notes from implementation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes for Quality Assurance</label>
    <length>7000</length>
    <type>Html</type>
</CustomField>