unpackaged/main/default/objects/Policy_Implementation__c/fields/Implementation_Review__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Review__c</fullName>
    <description>QA Implementation Approved or resubmitted</description>
    <label>Implementation Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Resubmit</fullName>
            </value>
            <value>
                <fullName>Review Again</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>