unpackaged/main/default/objects/Policy_Implementation__c/fields/ISM_Notes_to_QA__c.field-meta.xml
<CustomField>
    <fullName>ISM_Notes_to_QA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ISM Notes to QA</label>
    <length>3500</length>
    <type>Html</type>
</CustomField>