unpackaged/main/default/objects/Policy_Implementation__c/fields/ISM_Scrub_Notes__c.field-meta.xml
<CustomField>
    <fullName>ISM_Scrub_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ISM Scrub Notes</label>
    <length>7000</length>
    <type>Html</type>
</CustomField>