unpackaged/main/default/objects/Policy_Implementation__c/fields/Large_Case_Scrub__c.field-meta.xml
<CustomField>
    <fullName>Large_Case_Scrub__c</fullName>
    <description>This field contains large cases (300 +), combined scrub process with Underwriting, Account Management and Policy Services.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Combined scrub process with Underwriting, Account Management and Policy Services</inlineHelpText>
    <label>Large Case Scrub</label>
    <type>TextArea</type>
</CustomField>