unpackaged/main/default/objects/Policy_Implementation__c/fields/License_Verified__c.field-meta.xml
<CustomField>
    <fullName>License_Verified__c</fullName>
    <description>This field status of License Verified and contains information of Gate1</description>
    <label>License Verified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>