unpackaged/main/default/objects/Policy_Implementation__c/fields/License_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Verified_Date__c</fullName>
    <description>This field contains Gate1 information</description>
    <encryptionScheme>None</encryptionScheme>
    <label>License Verified Date</label>
    <type>DateTime</type>
</CustomField>