unpackaged/main/default/objects/Policy_Implementation__c/fields/List_of_employees_not_actively_at_work__c.field-meta.xml
<CustomField>
    <fullName>List_of_employees_not_actively_at_work__c</fullName>
    <description>This field status of List of employees not actively at work and contains information of Gate2</description>
    <label>List of employees not actively at work</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Halt</fullName>
            </value>
            <value>
                <fullName>Continue/Don’t Submit</fullName>
            </value>
            <value>
                <fullName>Continue/Submit</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>