unpackaged/main/default/objects/Policy_Implementation__c/fields/LTD_Buy_up__c.field-meta.xml
<CustomField>
    <fullName>LTD_Buy_up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Long Term Disability Buy-up</description>
    <label>LTD Buy-up</label>
    <type>Checkbox</type>
</CustomField>